getenv.3: ATTRIBUTES: Note functions that are thread-safe
The functions getenv() and secure_getenv() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getenv.3
+++ b/man3/getenv.3
@@ -93,6 +93,19 @@ environment, or NULL if there is no match.
 .SH VERSIONS
 .BR secure_getenv ()
 first appeared in glibc 2.17.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw25 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getenv (),
+.BR secure_getenv ()
+T}	Thread safety	MT-Safe env
+.TE
 .SH CONFORMING TO
 .BR getenv ():
 SVr4, POSIX.1-2001, 4.3BSD, C89, C99.
