--- a/man3/wcpncpy.3
+++ b/man3/wcpncpy.3
@@ -91,10 +91,17 @@ characters at
 returns a pointer to the last wide character written, that is,
 .IR dest + n \-1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR wcpncpy ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2008.
 .SH SEE ALSO
