--- a/man3/wcpcpy.3
+++ b/man3/wcpcpy.3
@@ -65,10 +65,17 @@ returns a pointer to the end of the wide-character string
 .IR dest ,
 that is, a pointer to the terminating null wide character.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR wcpcpy ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2008.
 .SH SEE ALSO
