strcasecmp.3: ATTRIBUTES: Note functions that are thread safe with exceptions
The functions strcasecmp() and strncasecmp() are thread safe
with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strcasecmp.3
+++ b/man3/strcasecmp.3
@@ -73,6 +73,19 @@ an integer less than, equal to, or greater than zero if
 bytes thereof) is found, respectively, to be
 less than, to match, or be greater than
 .IR s2 .
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strcasecmp (),
+.BR strncasecmp ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 4.4BSD, POSIX.1-2001.
 .SH NOTES
