inet_pton.3: ATTRIBUTES: Note function that is thread safe with exceptions
The function inet_pton() is thread safe with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/inet_pton.3
+++ b/man3/inet_pton.3
@@ -126,6 +126,18 @@ does not contain a valid address family, \-1 is returned and
 .I errno
 is set to
 .BR EAFNOSUPPORT .
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR inet_pton ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
