fnmatch.3: ATTRIBUTES: Note function that is thread safe with exceptions
The function fnmatch() is thread safe with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fnmatch.3
+++ b/man3/fnmatch.3
@@ -93,6 +93,18 @@ matches
 .IR pattern ,
 .B FNM_NOMATCH
 if there is no match or another nonzero value if there is an error.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fnmatch ()
+T}	Thread safety	MT-Safe env locale
+.TE
 .SH CONFORMING TO
 POSIX.2.
 The
