ttyslot.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ttyslot.3
+++ b/man3/ttyslot.3
@@ -121,12 +121,17 @@ associated with a terminal that occurs in this data base)
 it returns 0 on UNIX\ V6 and V7 and BSD-like systems,
 but \-1 on System V-like systems.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ttyslot ()
-function calls thread-unsafe function
-.BR getttyent (),
-so it is not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 SUSv1; marked as LEGACY in SUSv2; removed in POSIX.1-2001.
 SUSv2 requires \-1 on error.
