--- a/man3/ttyname.3
+++ b/man3/ttyname.3
@@ -72,14 +72,20 @@ File descriptor does not refer to a terminal device.
 .I buflen
 was too small to allow storing the pathname.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ttyname ()
-function is not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe
+T{
 .BR ttyname_r ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.2BSD, POSIX.1-2001.
 .SH SEE ALSO
