nl_langinfo.3: ATTRIBUTES: Note function that is thread safe with exceptions
The function nl_langinfo() is thread safe with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/nl_langinfo.3
+++ b/man3/nl_langinfo.3
@@ -113,6 +113,18 @@ next call to
 .BR nl_langinfo ()
 or
 .BR setlocale (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR nl_langinfo ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 SUSv2, POSIX.1-2001.
 .SH EXAMPLE
