towlower.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/towlower.3
+++ b/man3/towlower.3
@@ -89,14 +89,20 @@ returns its lowercase equivalent;
 otherwise it returns
 .IR wc .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR towlower ()
-function is thread-safe with exceptions.
-It can be safely used in multithreaded applications, as long as
-.BR setlocale (3)
-is not called to change the locale during its execution.
-.\" FIXME . need a thread-safety statement about towlower_l()
+T}	Thread safety	MT-Safe locale
+T{
+.BR towlower_l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH VERSIONS
 The
 .BR towlower_l ()
