tempnam.3: ATTRIBUTES: Note function that is thread-safe
The function tempnam() is thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/tempnam.3
+++ b/man3/tempnam.3
@@ -102,6 +102,18 @@ set to indicate the cause of the error.
 .TP
 .B ENOMEM
 Allocation of storage failed.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR tempnam ()
+T}	Thread safety	MT-Safe env
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
 POSIX.1-2008 marks
