toupper.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/toupper.3
+++ b/man3/toupper.3
@@ -113,17 +113,22 @@ The value returned is that of the converted letter, or
 .I c
 if the conversion was not possible.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR toupper ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR toupper (),
 .BR tolower ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
-.\" FIXME . Add toupper_l() and tolower_l()
+T}	Thread safety	MT-Safe locale
+T{
+.BR toupper_l (),
+.BR tolower_l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR toupper (),
 .BR tolower ():
