--- a/man3/tmpnam.3
+++ b/man3/tmpnam.3
@@ -84,15 +84,20 @@ filename, or NULL if a unique name cannot be generated.
 .SH ERRORS
 No errors are defined.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR tmpnam ()
-function is thread-safe with exceptions.
-It is not thread-safe if called with a NULL parameter.
-.LP
-The
+T}	Thread safety	MT-Safe /!s
+T{
 .BR tmpnam_r ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89, C99, POSIX.1-2001.
 POSIX.1-2008 marks
