--- a/man3/strptime.3
+++ b/man3/strptime.3
@@ -299,6 +299,18 @@ If
 fails to match all
 of the format string and therefore an error occurred, the function
 returns NULL.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strptime ()
+T}	Thread safety	MT-Safe env locale
+.TE
 .SH CONFORMING TO
 SUSv2, POSIX.1-2001.
 .SH NOTES
