strftime.3: ATTRIBUTES: Note function that is thread safe with exceptions
The function strftime() is thread safe with exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strftime.3
+++ b/man3/strftime.3
@@ -358,6 +358,18 @@ The environment variables
 and
 .B LC_TIME
 are used.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strftime ()
+T}	Thread safety	MT-Safe env locale
+.TE
 .SH CONFORMING TO
 SVr4, C89, C99.
 There are strict inclusions between the set of conversions
