catopen.3: ATTRIBUTES: Note functions that are thread-safe
The functions catopen() and catclose() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/catopen.3
+++ b/man3/catopen.3
@@ -143,6 +143,21 @@ is set to
 The language to use if
 .I flag
 is 0.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR catopen ()
+T}	Thread safety	MT-Safe env
+T{
+.BR catclose ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .\" In XPG 1987, Vol. 3 it says:
