termios.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/termios.3
+++ b/man3/termios.3
@@ -972,8 +972,16 @@ it may be necessary to follow this call with a further call to
 .BR tcgetattr ()
 to check that all changes have been performed successfully.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.nh
+.ad l
+.TS
+allbox;
+lb lb lb
+lw37 l l.
+Interface	Attribute	Value
+T{
 .BR tcgetattr (),
 .BR tcsetattr (),
 .BR tcsendbreak (),
@@ -985,9 +993,11 @@ The
 .BR cfgetospeed (),
 .BR cfsetispeed (),
 .BR cfsetospeed (),
-and
 .BR cfsetspeed ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
+.ad
+.hy
 .SH CONFORMING TO
 .BR tcgetattr (),
 .BR tcsetattr (),
