exec.3: ATTRIBUTES: Note functions that are thread-safe
The functions execl(), execlp(), execle(), execv(), execvp() and
execvpe() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/exec.3
+++ b/man3/exec.3
@@ -196,6 +196,25 @@ for any of the errors specified for
 The
 .BR execvpe ()
 function first appeared in glibc 2.11.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw29 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR execl (),
+.BR execle (),
+.BR execv ()
+T}	Thread safety	MT-Safe
+T{
+.BR execlp (),
+.BR execvp (),
+.BR execvpe ()
+T}	Thread safety	MT-Safe env
+.TE
 .SH CONFORMING TO
 POSIX.1-2001, POSIX.1-2008.
 
