--- a/man3/tcgetpgrp.3
+++ b/man3/tcgetpgrp.3
@@ -107,12 +107,18 @@ of the calling process.
 has a supported value, but is not the process group ID of a
 process in the same session as the calling process.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR tcgetpgrp ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR tcgetpgrp (),
 .BR tcsetpgrp ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
