--- a/man3/tan.3
+++ b/man3/tan.3
@@ -131,13 +131,19 @@ An overflow floating-point exception
 .RB ( FE_OVERFLOW )
 is raised.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw21 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR tan (),
 .BR tanf (),
-and
 .BR tanl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
