getw.3: ATTRIBUTES: Note functions that are thread-safe
The functions getw() and putw() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getw.3
+++ b/man3/getw.3
@@ -77,6 +77,19 @@ returns the word read, and
 .BR putw ()
 returns 0.
 On error, they return \fBEOF\fP.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw14 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getw (),
+.BR putw ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, SUSv2.
 Not present in POSIX.1-2001.
