--- a/man3/system.3
+++ b/man3/system.3
@@ -108,10 +108,17 @@ and so on).
 .BR system ()
 does not affect the wait status of any other children.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR system ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C89, C99, POSIX.1-2001.
 .SH NOTES
