strtoul.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strtoul.3
+++ b/man3/strtoul.3
@@ -163,17 +163,19 @@ to
 in case
 no conversion was performed (no digits seen, and 0 returned).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw32 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strtoul (),
 .BR strtoull (),
-and
 .BR strtouq ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 .BR strtoul ()
 conforms to SVr4, C89, C99, and POSIX-2001, and
