--- a/man3/getgrouplist.3
+++ b/man3/getgrouplist.3
@@ -95,6 +95,18 @@ can be used to resize the buffer passed to a further call
 .BR getgrouplist ().
 .SH VERSIONS
 This function is present since glibc 2.2.4.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getgrouplist ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 This function is nonstandard; it appears on most BSDs.
 .SH BUGS
