regex.3: ATTRIBUTES: Note functions that are thread safe with exceptions
The functions regcomp() and regexec() are thread safe with exceptions.
The functions regerror() and regfree() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/regex.3
+++ b/man3/regex.3
@@ -301,6 +301,25 @@ The regex routines ran out of memory.
 .TP
 .B REG_ESUBREG
 Invalid back reference to a subexpression.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR regcomp (),
+.BR regexec ()
+T}	Thread safety	MT-Safe locale
+T{
+.BR regerror ()
+T}	Thread safety	MT-Safe env
+T{
+.BR regfree ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH SEE ALSO
