--- a/man3/strtol.3
+++ b/man3/strtol.3
@@ -159,17 +159,19 @@ to
 in case
 no conversion was performed (no digits seen, and 0 returned).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw29 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strtol (),
 .BR strtoll (),
-and
 .BR strtoq ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 .BR strtol ()
 conforms to SVr4, 4.3BSD, C89, C99, and POSIX.1-2001, and
