--- a/man3/strtoimax.3
+++ b/man3/strtoimax.3
@@ -56,16 +56,18 @@ is returned, and
 is set to
 .BR ERANGE .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR strtoimax ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strtoimax (),
 .BR strtoumax ()
-functions are thread-safe with exceptions.
-These functions can be safely used in multithreaded applications,
-as long as
-.BR setlocale (3)
-is not called to change the locale during their execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH SEE ALSO
