inet.3: ATTRIBUTES: Note functions that are thread safe with exceptions
The functions inet_aton() and inet_addr() are thread safe with
exceptions.
The functions inet_network(), inet_ntoa(), inet_makeaddr(),
inet_lnaof() and inet_netof() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/inet.3
+++ b/man3/inet.3
@@ -215,6 +215,28 @@ struct in_addr {
 };
 .fi
 .in
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw30 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR inet_aton (),
+.BR inet_addr ()
+T}	Thread safety	MT-Safe locale
+T{
+.BR inet_network (),
+.BR inet_ntoa (),
+.br
+.BR inet_makeaddr (),
+.BR inet_lnaof (),
+.br
+.BR inet_netof ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 .BR inet_addr ()
