strstr.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strstr.3
+++ b/man3/strstr.3
@@ -63,17 +63,20 @@ but ignores the case of both arguments.
 These functions return a pointer to the beginning of the
 located substring, or NULL if the substring is not found.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strstr ()
-function is thread-safe.
-.LP
-The
+T}	Thread safety	MT-Safe
+T{
 .BR strcasestr ()
-function is thread-safe with exceptions.
-It can be safely used in multithreaded applications, as long as
-.BR setlocale (3)
-is not called to change the locale during its execution.
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 The
 .BR strstr ()
