--- a/man3/strspn.3
+++ b/man3/strspn.3
@@ -72,12 +72,18 @@ the initial segment of
 which are not in the string
 .IR reject .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR strspn ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw19 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strspn (),
 .BR strcspn ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89, C99.
 .SH SEE ALSO
