--- a/man3/strnlen.3
+++ b/man3/strnlen.3
@@ -69,10 +69,17 @@ if there is no null byte (\(aq\\0\(aq) among the first
 bytes pointed to by
 .IR s .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strnlen ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2008.
 .SH SEE ALSO
