--- a/man3/getpass.3
+++ b/man3/getpass.3
@@ -94,10 +94,17 @@ The process does not have a controlling terminal.
 .\" .BR getpass ()
 .\" function appeared in Version 7 AT&T UNIX.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getpass ()
-function is not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 Present in SUSv2, but marked LEGACY.
 Removed in POSIX.1-2001.
