--- a/man3/getpwent.3
+++ b/man3/getpwent.3
@@ -152,16 +152,21 @@ Insufficient buffer space supplied.
 .I /etc/passwd
 local password database file
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getpwent ()
-function is not thread-safe.
-.LP
-The
-.BR setpwent ()
-and
+T}	Thread safety	MT-Unsafe
+T{
+.BR setpwent (),
 .BR endpwent ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
 The
