getpwnam.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getpwnam.3
+++ b/man3/getpwnam.3
@@ -215,18 +215,22 @@ Insufficient buffer space supplied.
 .I /etc/passwd
 local password database file
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR getpwnam ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getpwnam (),
 .BR getpwuid ()
-functions are not thread-safe.
-.LP
-The
-.BR getpwnam_r ()
-and
+T}	Thread safety	MT-Unsafe
+T{
+.BR getpwnam_r (),
 .BR getpwuid_r ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
 The
