--- a/man3/getsubopt.3
+++ b/man3/getsubopt.3
@@ -127,10 +127,17 @@ is changed, the first suboption before the call to
 is not (necessarily) the same as the first suboption after
 .BR getsubopt ().
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getsubopt ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
