getusershell.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getusershell.3
+++ b/man3/getusershell.3
@@ -91,13 +91,20 @@ function returns NULL on end-of-file.
 /etc/shells
 .fi
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw31 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR getusershell (),
-.BR setusershell ()
-and
+.BR setusershell (),
+.br
 .BR endusershell ()
-functions are not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 4.3BSD.
 .SH SEE ALSO
