--- a/man3/getutmp.3
+++ b/man3/getutmp.3
@@ -53,12 +53,18 @@ These functions do not return a value.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR getutmp ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw21 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR getutmp (),
 .BR getutmpx ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are nonstandard, but appear on a few other systems,
 such as Solaris and NetBSD.
