--- a/man3/iconv.3
+++ b/man3/iconv.3
@@ -141,9 +141,17 @@ An incomplete multibyte sequence has been encountered in the input.
 This function is available in glibc since version 2.1.
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR iconv ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
