if_nametoindex.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/if_nametoindex.3
+++ b/man3/if_nametoindex.3
@@ -83,12 +83,18 @@ may also fail for any of the errors specified for
 or
 .BR ioctl (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR if_nametoindex ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw34 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR if_nametoindex (),
 .BR if_indextoname ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 RFC\ 3493, POSIX.1-2001.
 
