--- a/man3/ilogb.3
+++ b/man3/ilogb.3
@@ -135,12 +135,19 @@ is set to
 (but see BUGS).
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ilogb (),
 .BR ilogbf (),
-and
 .BR ilogbl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH BUGS
