ilogb.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ilogb.3
+++ b/man3/ilogb.3
@@ -145,12 +145,19 @@ or raise an exception for this case.
 .\" Bug raised: http://sources.redhat.com/bugzilla/show_bug.cgi?id=6794
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ilogb (),
 .BR ilogbf (),
-and
 .BR ilogbl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH SEE ALSO
