--- a/man3/index.3
+++ b/man3/index.3
@@ -60,12 +60,18 @@ and
 functions return a pointer to
 the matched character or NULL if the character is not found.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR index ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR index (),
 .BR rindex ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.3BSD; marked as LEGACY in POSIX.1-2001.
 POSIX.1-2008 removes the specifications of
