isalpha.3: Reformat thread-safety information
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/isalpha.3
+++ b/man3/isalpha.3
@@ -224,7 +224,15 @@ The values returned are nonzero if the character
 falls into the tested class, and zero if not.
 .SH ATTRIBUTES
 .SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lbw33 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR isalnum (),
 .BR isalpha (),
 .BR isascii (),
@@ -237,10 +245,11 @@ The
 .BR ispunct (),
 .BR isspace (),
 .BR isupper (),
-and
 .BR isxdigit ()
-functions are thread-safe.
-.\" FIXME . need a thread-safety statement about the *_l functions
+T}	Thread safety	MT-Safe
+.TE
+.ad
+.\" FIXME: need a thread-safety statement about the *_l functions
 .SH VERSIONS
 .BR isalnum_l (),
 .BR isalpha_l (),
