puts.3: ATTRIBUTES: Note functions that are thread-safe
The functions fputc(), fputs(), putc(), putchar() and puts() are
thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/puts.3
+++ b/man3/puts.3
@@ -100,6 +100,22 @@ and
 return a nonnegative number on success, or
 .B EOF
 on error.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw25 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fputc (),
+.BR fputs (),
+.BR putc (),
+.BR putchar (),
+.BR puts ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C89, C99.
 .SH BUGS
