fread.3: ATTRIBUTES: Note functions that are thread-safe
The functions fread() and fwrite() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fread.3
+++ b/man3/fread.3
@@ -100,6 +100,19 @@ does not distinguish between end-of-file and error, and callers must use
 and
 .BR ferror (3)
 to determine which occurred.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw17 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fread (),
+.BR fwrite ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C89, POSIX.1-2001.
 .SH SEE ALSO
