--- a/man3/isgreater.3
+++ b/man3/isgreater.3
@@ -123,16 +123,24 @@ is NaN and 0 otherwise.
 .SH ERRORS
 No errors occur.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.ad l
+.TS
+allbox;
+lbw30 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR isgreater (),
 .BR isgreaterequal (),
 .BR isless (),
 .BR islessequal (),
 .BR islessgreater (),
-and
 .BR isunordered ()
-macros are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
+.ad
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH NOTES
