strfry.3: ATTRIBUTES: Note function that is thread-safe
The function strfry() is thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strfry.3
+++ b/man3/strfry.3
@@ -54,6 +54,18 @@ The
 .BR strfry ()
 functions returns a pointer to the randomized
 string.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strfry ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR strfry ()
