strerror.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strerror.3
+++ b/man3/strerror.3
@@ -200,15 +200,21 @@ is not a valid error number.
 .B ERANGE
 Insufficient storage was supplied to contain the error description string.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strerror ()
-function is not thread-safe.
-.LP
-The
-.BR strerror_r ()
-function is thread-safe.
-.\" FIXME . Need a thread-safety statement about strerror_l()
+T}	Thread safety	MT-Unsafe
+T{
+.BR strerror_r (),
+.BR strerror_l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH VERSIONS
 The
 .BR strerror_l ()
