--- a/man3/strcmp.3
+++ b/man3/strcmp.3
@@ -77,12 +77,18 @@ bytes thereof) is found, respectively, to be less than, to
 match, or be greater than
 .IR s2 .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
-.BR strcmp ()
-and
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw19 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR strcmp (),
 .BR strncmp ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89, C99.
 .SH SEE ALSO
