timegm.3: ATTRIBUTES: Note functions that are thread safe with exceptions
The functions timelocal() and timegm() are thread safe with
exceptions.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/timegm.3
+++ b/man3/timegm.3
@@ -51,6 +51,19 @@ are the inverses of
 .BR localtime (3)
 and
 .BR gmtime (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw21 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR timelocal (),
+.BR timegm ()
+T}	Thread safety	MT-Safe env locale
+.TE
 .SH CONFORMING TO
 These functions are nonstandard GNU extensions
 that are also present on the BSDs.
