strchr.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/strchr.3
+++ b/man3/strchr.3
@@ -105,13 +105,19 @@ if the character is not found.
 .BR strchrnul ()
 first appeared in glibc in version 2.1.1.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw32 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR strchr (),
 .BR strrchr (),
-and
 .BR strchrnul ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR strchr ()
 and
