--- a/man3/stpncpy.3
+++ b/man3/stpncpy.3
@@ -89,10 +89,17 @@ or, if
 is not null-terminated,
 .IR dest + n .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR stpncpy ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function was added to POSIX.1-2008.
 Before that, it was a GNU extension.
