--- a/man3/stdio_ext.3
+++ b/man3/stdio_ext.3
@@ -130,24 +130,31 @@ The
 .BR __fpurge ()
 function discards the contents of the stream's buffer.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR __fbufsize (),
 .BR __fpending (),
-.BR __fpurge ()
-and
+.br
+.BR __fpurge (),
 .BR __fsetlocking ()
-functions do not lock the stream, so they are not thread-safe.
-.LP
-The
+T}	Thread safety	MT-Unsafe
+T{
 .BR __flbf (),
 .BR __freadable (),
+.br
 .BR __freading (),
 .BR __fwritable (),
-.BR __fwriting ()
-and
+.br
+.BR __fwriting (),
 .BR _flushlbf ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH SEE ALSO
 .BR flockfile (3),
 .BR fpurge (3)
