stdarg.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/stdarg.3
+++ b/man3/stdarg.3
@@ -227,14 +227,20 @@ have
 .B __va_copy
 instead, since that was the name used in the draft proposal.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw21 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR va_start (),
 .BR va_arg (),
 .BR va_end (),
-and
 .BR va_copy ()
-macros are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR va_start (),
