sigset.3: ATTRIBUTES: Note macros that are thread-safe
The functions sigset(), sighold(), sigrelse() and sigignore()
are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/sigset.3
+++ b/man3/sigset.3
@@ -170,6 +170,22 @@ For
 .BR sigignore (),
 see the errors under
 .BR sigaction (2).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR sigset (),
+.BR sighold (),
+.br
+.BR sigrelse (),
+.BR sigignore ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001.
 These functions are obsolete: do not use them in new programs.
