rand.3: ATTRIBUTES: Note macros that are thread-safe
The functions rand(), rand_r() and srand() are thread safe.

Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/rand.3
+++ b/man3/rand.3
@@ -81,7 +81,7 @@ function is automatically seeded with a value of 1.
 .PP
 The function
 .BR rand ()
-is not reentrant or thread-safe, since it
+is not reentrant, since it
 uses hidden state that is modified on each call.
 This might just be the seed value to be used by the next call,
 or it might be something more elaborate.
@@ -126,6 +126,20 @@ functions return a value between 0 and
 The
 .BR srand ()
 function returns no value.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw25 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR rand (),
+.BR rand_r (),
+.BR srand ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The functions
 .BR rand ()
