--- a/man3/ldexp.3
+++ b/man3/ldexp.3
@@ -127,13 +127,19 @@ An underflow floating-point exception
 .RB ( FE_UNDERFLOW )
 is raised.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw27 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR ldexp (),
 .BR ldexpf (),
-and
 .BR ldexpl ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
