--- a/man3/lockf.3
+++ b/man3/lockf.3
@@ -152,10 +152,17 @@ An invalid operation was specified in
 .B ENOLCK
 Too many segment locks open, lock table is full.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR lockf ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001.
 .SH SEE ALSO
