--- a/man3/sockatmark.3
+++ b/man3/sockatmark.3
@@ -71,10 +71,17 @@ can be applied.
 .BR sockatmark ()
 was added to glibc in version 2.2.4.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sockatmark ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
