sigvec.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/sigvec.3
+++ b/man3/sigvec.3
@@ -219,18 +219,21 @@ See the ERRORS under
 and
 .BR sigprocmask (2).
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw32 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sigvec (),
+.BR sigmask (),
 .BR sigblock (),
 .BR sigsetmask (),
-and
 .BR siggetmask ()
-functions are thread-safe.
-.LP
-The
-.BR sigmask ()
-macro is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH VERSIONS
 Starting with version 2.21, the GNU C library no longer exports the
 .BR sigvec ()
