sigsetops.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/sigsetops.3
+++ b/man3/sigsetops.3
@@ -130,18 +130,27 @@ to indicate the cause of the error.
 .I sig
 is not a valid signal.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw31 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sigemptyset (),
 .BR sigfillset (),
+.br
 .BR sigaddset (),
 .BR sigdelset (),
+.br
 .BR sigismember (),
 .BR sigisemptyset (),
+.br
 .BR sigorset (),
-and
 .BR sigandset ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
