--- a/man3/sigpause.3
+++ b/man3/sigpause.3
@@ -54,10 +54,17 @@ with
 set to
 .BR EINTR .
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sigpause ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The System V version of
 .BR sigpause ()
