siginterrupt.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/siginterrupt.3
+++ b/man3/siginterrupt.3
@@ -85,11 +85,17 @@ set to indicate the cause of the error.
 .B EINVAL
 The specified signal number is invalid.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR siginterrupt ()
-function uses a global variable that is not protected,
-so it is not thread-safe.
+T}	Thread safety	MT-Unsafe
+.TE
 .SH CONFORMING TO
 4.3BSD, POSIX.1-2001.
 POSIX.1-2008 marks
