--- a/man3/setbuf.3
+++ b/man3/setbuf.3
@@ -162,14 +162,21 @@ on failure.
 
 The other functions do not return a value.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw23 lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR setbuf (),
 .BR setbuffer (),
+.br
 .BR setlinebuf (),
-and
 .BR setvbuf ()
-functions are thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR setbuf ()
