--- a/man3/sem_post.3
+++ b/man3/sem_post.3
@@ -59,10 +59,17 @@ is not a valid semaphore.
 .\" Added in POSIX.1-2008 TC1 (Austin Interpretation 213)
 The maximum allowable value for a semaphore would be exceeded.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sem_post ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH NOTES
