sched_getcpu.3: Reformat thread-safety information
Signed-off-by: Peng Haitao <penght@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/sched_getcpu.3
+++ b/man3/sched_getcpu.3
@@ -70,10 +70,17 @@ This kernel does not implement
 .SH VERSIONS
 This function is available since glibc 2.6.
 .SH ATTRIBUTES
-.SS Multithreading (see pthreads(7))
-The
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
 .BR sched_getcpu ()
-function is thread-safe.
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR sched_getcpu ()
 is glibc-specific.
